最基础版本

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>
-  {{title}}
-</h1>
+<form class="ui large form  segment">
+  <h3 class="ui header">Add a  link</h3>
+  <div class="field">
+    <label for="title"> title: </label>
+    <input type="text" name="title" #newtitle>
+  </div>
+  <div class="field">
+    <label for="link"> link: </label>
+    <input type="text" name="link" #newlink>
+  </div>
+</form>
