--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<form class="ui large form  segment">
+<!-- <form class="ui large form  segment">
   <h3 class="ui header">Add a  link</h3>
   <div class="field">
     <label for="title"> title: </label>
@@ -8,4 +8,17 @@
     <label for="link"> link: </label>
     <input type="text" name="link" #newlink>
   </div>
-</form>
+
+  <button (click)="addArticle(newtitle,newlink)" class="ui positive right floated button">
+  submit  link
+</button>
+</form> -->
+
+
+<!-- 控件 -->
+<!-- <app-ng-if></app-ng-if> -->
+<!-- <app-ng-switch></app-ng-switch> -->
+<!-- <app-ng-style></app-ng-style> -->
+<!-- <app-ng-class></app-ng-class> -->
+<!-- <app-ng-for></app-ng-for> -->
+<app-ng-non-bindable></app-ng-non-bindable>
