--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,17 +16,22 @@
 
 
 <!-- 控件 -->
-<!-- <app-ng-if></app-ng-if> -->
-<!-- <app-ng-switch></app-ng-switch> -->
-<!-- <app-ng-style></app-ng-style> -->
-<!-- <app-ng-class></app-ng-class> -->
-<!-- <app-ng-for></app-ng-for> -->
-<!-- <app-ng-non-bindable></app-ng-non-bindable> -->
-<!-- <app-demo-form-sku></app-demo-form-sku> -->
-<!-- <app-demo-form-sku-builder></app-demo-form-sku-builder> -->
-<!-- <app-demo-form-with-validations></app-demo-form-with-validations> -->
-<!-- <app-demo-form-with-validations-explicit></app-demo-form-with-validations-explicit> -->
-<!-- <app-demo-form-validations-shorthand></app-demo-form-validations-shorthand> -->
-<!-- <app-demo-form-custom-validations></app-demo-form-custom-validations> -->
-<!-- <app-demo-form-value-chang></app-demo-form-value-chang> -->
-<app-demo-form-ng-model></app-demo-form-ng-model>
+<!-- 内置指令 -->
+
+<!-- <app-ng-if></app-ng-if>
+<app-ng-switch></app-ng-switch>
+<app-ng-style></app-ng-style>
+<app-ng-class></app-ng-class>
+<app-ng-for></app-ng-for>
+<app-ng-non-bindable></app-ng-non-bindable> -->
+
+<!-- 表单 -->
+
+<!-- <app-demo-form-sku></app-demo-form-sku>
+<app-demo-form-sku-builder></app-demo-form-sku-builder>
+<app-demo-form-with-validations></app-demo-form-with-validations>
+<app-demo-form-with-validations-explicit></app-demo-form-with-validations-explicit>
+<app-demo-form-validations-shorthand></app-demo-form-validations-shorthand>
+<app-demo-form-custom-validations></app-demo-form-custom-validations>
+<app-demo-form-value-chang></app-demo-form-value-chang>
+<app-demo-form-ng-model></app-demo-form-ng-model> -->
