--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,79 +1,23 @@
-<!-- Menu Bar -->
-<!-- <div class="ui menu">
-  <div class="ui container">
-    <a href="#" class="header item">
-      <img class="logo" src="/assets/images/ng-book-2-minibook.png">
-      ng-book 2
-    </a>
-    <div class="header item borderless">
-      <h1 class="ui header">
-        Angular 2 Simple Example
-      </h1>
-    </div>
-  </div>
-</div> -->
-
-
-
-<!-- <form class="ui large form  segment">
-  <h3 class="ui header">Add a  link</h3>
-  <div class="field">
-    <label for="title"> title: </label>
-    <input type="text" name="title" #newtitle>
-  </div>
-  <div class="field">
-    <label for="link"> link: </label>
-    <input type="text" name="link" #newlink>
-  </div>
-
-  <button (click)="addArticle(newtitle,newlink)" class="ui positive right floated button">
-  submit  link
-</button>
-</form> -->
-
-
-<!-- 控件 -->
-<!-- 内置指令 -->
-
-<!-- <app-ng-if></app-ng-if>
-<app-ng-switch></app-ng-switch>
-<app-ng-style></app-ng-style>
-<app-ng-class></app-ng-class>
-<app-ng-for></app-ng-for>
-<app-ng-non-bindable></app-ng-non-bindable> -->
-
-<!-- 表单 -->
-
-<!-- <app-demo-form-sku></app-demo-form-sku>
-<app-demo-form-sku-builder></app-demo-form-sku-builder>
-<app-demo-form-with-validations></app-demo-form-with-validations>
-<app-demo-form-with-validations-explicit></app-demo-form-with-validations-explicit>
-<app-demo-form-validations-shorthand></app-demo-form-validations-shorthand>
-<app-demo-form-custom-validations></app-demo-form-custom-validations>
-<app-demo-form-value-chang></app-demo-form-value-chang>
-<app-demo-form-ng-model></app-demo-form-ng-model> -->
-
-
 <div class="ui  container">
   <div class="ui center aligned basic segment">
     <nav>
-      <div class="five ui buttons">
-        <button class="ui red button" [routerLink]="['home']">Home</button>
+      <div class=" ui buttons">
+        <button class="ui red button" [routerLink]="['home']">home</button>
         <button class="ui orange button" [routerLink]="['about']">About</button>
         <button class="ui yellow button" [routerLink]="['contact']">Contact Us</button>
         <button class="ui olive button" [routerLink]="['artId/123']">ArtId/123</button>
         <button class="ui green button" [routerLink]="['music']"> music </button>
-        <!-- <button class="ui teal button">Teal</button>
-      <button class="ui blue button">Blue</button>
-      <button class="ui violet button">Violet</button>
-      <button class="ui purple button">Purple</button>
-      <button class="ui pink button">Pink</button>
-      <button class="ui brown button">Brown</button>
-      <button class="ui grey button">Grey</button>
-      <button class="ui black button">Black</button> -->
+        <button class="ui teal button" [routerLink]="['products']">products</button>
+        <!-- <button class="ui blue button">Blue</button>
+        <button class="ui violet button">Violet</button>
+        <button class="ui purple button">Purple</button>
+        <button class="ui pink button">Pink</button>
+        <button class="ui brown button">Brown</button>
+        <button class="ui grey button">Grey</button>
+        <button class="ui black button">Black</button> -->
       </div>
     </nav>
-    <div class="ui horizontal divider">Content </div>
+    <div class="ui horizontal divider">|´・ω・)ノ</div>
     <router-outlet></router-outlet>
   </div>
 </div>
